# QuadraticRoughHeston

./: .gitignore  Forward variance curve construction.ipynb  GammaKernel.R  LICENSE  QR Heston SSR.ipynb  QR Heston simulation.ipynb  QRHGammaYFromXi.R  QRHsimulation.R  README.md  forward_variance_curve_construction.ipynb  fwdVarCurve.R  fwd_var_curve.py  plotIvolsMC.R  pyproject.toml  qrheston_simulation.ipynb  qrheston_ssr.ipynb  spx_implied_vol_20230215.parquet
Python/: black.py  forward_variance_curve_construction.ipynb  pyproject.toml  qrheston.py  qrheston_simulation.ipynb  qrheston_ssr.ipynb  utils.py  vix_implied_vol_20230215.parquet
R/: BlackScholes.R  Forward variance curve construction.ipynb  FukasawaRobust.R  GammaKernel.R  QR Heston SSR.ipynb  QR Heston simulation.ipynb  QRHGammaYFromXi.R  QRHsimulation.R  forward_variance_curve_construction.ipynb  fukasawa_robust.R  fwdVarCurve.R  gamma_kernel.R  plotIvolsMC.R  plot_ivols_mc.R  qrh_gamma_y_from_xi.R  qrh_simulation.R  qrheston_simulation.ipynb  qrheston_ssr.ipynb  spx_vix_vols_20230215.rData  xi20230215.rData
